--- a/src/resources/mail/auth/forgot_password.html
+++ b/src/resources/mail/auth/forgot_password.html
@@ -1,1 +1,1 @@
-<p>Você esqueceu sua senha? não tem proble,a utilize esse token: {{ token }}</p>
+<p>Você esqueceu sua senha? não tem problema utilize esse token: {{ token }}</p>
